--- a/index.html
+++ b/index.html
@@ -327,9 +327,9 @@
 
 
 
-<section id="projects">
+<section id="projects" class="projects">
   <div class="section-title">
-    <h2>/ Projects</h2>
+    <h2 class="section-h2">/ Projects</h2>
     <div class="line"></div>
   </div>
   <div class="project-cards">
@@ -353,7 +353,6 @@
     <!-- Ajoutez d'autres projets ici -->
   </div>
 </section>
-
 
 </body>
 </html>
