--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
     The app provides interactive lessons, practical examples, and guided exercises that make understanding React’s core features—such as components, state management, hooks, and routing—easy and engaging. 
     Ideal for beginners and developers looking to strengthen their React skills.</p>
     <P>React, JavaScript, HTML, CSS, React Hooks, React Router, Component-based Architecture</p>
-      <a href="https://lien-du-projet1.com" target="_blank">see the project</a>
+      <a href="https://github.com/Kaoutar-Motassim/React-Learning-App" target="_blank">see the project</a>
     </article>
     <article class="project-card">
       <p class="project-icon">🗀</p>
@@ -348,9 +348,14 @@
       <p>ObservaLog is a real-time distributed logging and monitoring platform built with React, Node.js, PostgreSQL, Prisma, RabbitMQ, and Socket.IO. 
     It collects, stores, and visualizes application logs, providing instant alerts and a dynamic dashboard for better system observability and troubleshooting.</p>
     <p>React, Node.js, PostgreSQL, Prisma, RabbitMQ, Socket.IO, Real-time Monitoring, Logging, Dashboard Development</p>
-      <a href="https://lien-du-projet2.com" target="_blank">see the project</a>
+      <a href="https://github.com/Kaoutar-Motassim/observalog-project" target="_blank">see the project</a>
     </article>
-    <!-- Ajoutez d'autres projets ici -->
+    <article class="project-card">
+      <p class="project-icon">🗀</p>
+      <h3>AI-Based Cast Character Recognition on Aluminium Wheel Hubs</h3>
+      <p>This project presents an AI-based solution that uses deep learning and computer vision to automatically identify cast characters on aluminum wheel hubs. By training a visual recognition model on images of wheel hubs, the system can detect and recognize engraved or printed characters with high accuracy. This automation improves efficiency, reduces manual inspection time, and enhances quality control in the manufacturing process.</p>
+      <a href="" target="_blank">see the project</a>
+    </article>
   </div>
 </section>
 
